--- a/src/app/pages/centro-idiomas/centro-idiomas.component.html
+++ b/src/app/pages/centro-idiomas/centro-idiomas.component.html
@@ -36,7 +36,7 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <mat-icon>school</mat-icon>
+            <mat-icon> school </mat-icon>
             Pregrado
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -79,10 +79,10 @@
         <p> <b> Aplicación de la prueba: </b> 13/04/24. </p>
 
         <div class="important-note-container">
-          <h4><mat-icon>warning</mat-icon><span>Nota Importante</span></h4>
+          <h4><mat-icon> warning </mat-icon><span> Nota Importante </span></h4>
           <p> El alumno interesado debe enviar un correo electrónico a <strong> idiomas&#64;urbe.edu </strong> para
             solicitar formulario de pre-registro para presentar el o los niveles que considera está en capacidad de
-            aprobar. Puedes formalizar el pre - registro desde el siguiente <a
+            aprobar. Puedes formalizar el pre - registro desde el siguiente <a rel="noopener"
               href="https://forms.gle/Ls6sXT9A1QGT9zwe8" target="_blank"> link </a>. </p>
         </div>
       </mat-expansion-panel>
@@ -90,10 +90,11 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <mat-icon>school</mat-icon>
+            <mat-icon> school </mat-icon>
             Postgrado
           </mat-panel-title>
         </mat-expansion-panel-header>
+
         <div>
           <h2> Inglés Instrumental </h2>
 
@@ -111,7 +112,7 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <mat-icon>school</mat-icon>
+            <mat-icon> school </mat-icon>
             Extensión
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -121,6 +122,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Inglés </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -146,6 +148,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Japonés </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -165,6 +168,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Inglés Instrumental </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -182,6 +186,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Tutorías Particulares </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <ul>
                 <li> Abierto al público en general a partir de 10 años. </li>
@@ -197,6 +202,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Curso de Inglés Traveling Edition (Edición Viajeros) </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -212,6 +218,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Club de Conversación </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -229,6 +236,7 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Francés </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -242,8 +250,9 @@
 
           <mat-expansion-panel>
             <mat-expansion-panel-header>
-              <mat-panel-title>Italiano</mat-panel-title>
+              <mat-panel-title> Italiano </mat-panel-title>
             </mat-expansion-panel-header>
+
             <ng-container>
               <div>
                 <ul>
@@ -261,37 +270,39 @@
 
   <aside>
     <div>
-      <strong class="aside__header">Horarios de Atencion</strong>
+      <strong class="aside__header"> Horarios de Atención </strong>
       <div class="aside__content">
-        <strong>Turnos de clases</strong>
-        <span>Sábados</span>
-        <span> Matutino: 7:00 a.m. a 1:10 p.m.</span>
-        <span> Vespertino: 1:10 p.m. a 6:00 p.m.</span>
+        <strong> Turnos de clases </strong>
+        <span> Sábados </span>
+        <span> Matutino: 7:00 a.m. a 1:10 p.m. </span>
+        <span> Vespertino: 1:10 p.m. a 6:00 p.m. </span>
       </div>
     </div>
 
     <div>
-      <strong class="aside__header">Horarios de clases</strong>
+      <strong class="aside__header"> Horarios de clases </strong>
       <div class="aside__content">
-        <span>Jueves y viernes: 3:15 p.m. a 10:10 p.m.</span>
-        <span>Sábados: 9:05 a.m. a 3:55 p.m.</span>
+        <span> Jueves y viernes: 3:15 p.m. a 10:10 p.m. </span>
+        <span> Sábados: 9:05 a.m. a 3:55 p.m. </span>
       </div>
     </div>
 
     <div>
-      <strong class="aside__header">Atención a los participantes</strong>
+      <strong class="aside__header"> Atención a los participantes </strong>
       <div class="aside__content">
-        <strong>Coordinación Docente Postgrado</strong>
-        <span>Bloque E</span>
-        <span>Lunes a viernes: 7:00 a.m. a 10 p.m.</span>
-        <span>Sábados: 6:45 a.m. a 11:45 a.m. y 1:00 p.m a 4:00 p.m.</span>
+        <strong> Coordinación Docente Postgrado </strong>
+        <span> Bloque E </span>
+        <span> Lunes a viernes: 7:00 a.m. a 10 p.m. </span>
+        <span> Sábados: 6:45 a.m. a 11:45 a.m. y 1:00 p.m. a 4:00 p.m. </span>
+
         <div>
-          <strong>Coordinación de Programas</strong>
-          <span>Martes a viernes: 1:00 p.m a 10:00 p.m.</span>
-          <span>Sábados: 7:00 a.m. a 11:00 p.m. y 12:30 p.m. a 4:00 p.m.</span>
+          <strong> Coordinación de Programas </strong>
+          <span> Martes a viernes: 1:00 p.m. a 10:00 p.m. </span>
+          <span> Sábados: 7:00 a.m. a 11:00 p.m. y 12:30 p.m. a 4:00 p.m. </span>
         </div>
       </div>
     </div>
+
     <app-aside-nav [items]="contactsNav" [title]="'Contactos'" [type]="'contacts'"/>
   </aside>
 </div>
