capital humano arreglado

--- a/src/app/pages/capital-humano/capital-humano.component.scss
+++ b/src/app/pages/capital-humano/capital-humano.component.scss
@@ -1,4 +1,50 @@
+@use "../../../scss/components/navbar" as *;
+@use "../../../scss/layout/index" as *;
 @import url("../capital-humano/capital-humano-global-styles.scss");
+
+.page-wrapper {
+    @include container;
+
+    @media (min-width: 869px) {
+        flex-direction: row;
+    }
+}
+
+aside {
+  @include aside-container(869px);
+
+  .aside__header {
+    background-color: var(--dark-blue);
+    color: #fff;
+    display: block;
+    font-size: 1.8rem;
+    padding: 1rem 2rem;
+  }
+
+  .aside__content {
+    background-color: #eeeeee;
+    line-height: 2;
+    padding: 1rem 1.5rem;
+
+    span {
+      display: block;
+    }
+  }
+}
+
+main {
+    margin-bottom: 3rem;
+
+    @media (min-width: 869px){
+        margin-right: 3rem;
+        max-width: 68%;
+    }
+
+    .main-content {
+        margin-bottom: 5rem;
+        width: 70%
+    }
+}
 
 %other-titles {
     color: #00246A;
@@ -6,36 +52,36 @@
     margin-bottom: 0.5em;
 }
 
-main {
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    grid-template-columns: 1fr 30%;
-    grid-template-rows: 1fr;
-    grid-gap: 1.5em;
-    margin-top: 3em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 95%;
+// main {
+//     min-height: 100vh;
+//     display: grid;
+//     place-content: center;
+//     grid-template-columns: 1fr 30%;
+//     grid-template-rows: 1fr;
+//     grid-gap: 1.5em;
+//     margin-top: 3em;
+//     margin-left: auto;
+//     margin-right: auto;
+//     width: 95%;
 
-    @media screen and (min-width: 1023px) and (max-width: 1269px) {
-        margin-top: 3em;
-        grid-gap: 0.5em;
-        grid-template-columns: 1fr;
-    }
+//     @media screen and (min-width: 1023px) and (max-width: 1269px) {
+//         margin-top: 3em;
+//         grid-gap: 0.5em;
+//         grid-template-columns: 1fr;
+//     }
 
-    @media (min-width: 320px) and (max-width: 1023px) {
-        grid-template-columns: 1fr;
-        margin: 0;
-        grid-gap: 0;
-    }
-}
+//     @media (min-width: 320px) and (max-width: 1023px) {
+//         grid-template-columns: 1fr;
+//         margin: 0;
+//         grid-gap: 0;
+//     }
+// }
 
 .content-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 2em;
+    // padding-left: 2em;
 }
 
 h1 {
@@ -52,7 +98,7 @@ h1 {
 
     @media (min-width: 320px) and (max-width: 1023px) {
         height: 25vh;
-        margin-top: 1.5em;
+        // margin-top: 1.5em;
         margin-bottom: 1em;
     }
 }
@@ -67,6 +113,7 @@ h1 {
     display: flex;
     height: 100%;
     width: 100%;
+    // max-width: 900px;
 }
 
 .slider-container {
@@ -74,16 +121,16 @@ h1 {
     margin: 3rem 0rem;
     width: 100%;
 
-    @media screen and (min-width: 320px) and (max-width: 767px) {
-        margin: 0 auto;
-        width: 85vw;
-    }
+    // @media screen and (min-width: 320px) and (max-width: 767px) {
+    //     margin: 0 auto;
+    //     width: 85vw;
+    // }
 
 
-    @media (min-width: 766px) {
+    // @media (min-width: 766px) {
         border-radius: 12px;
-        margin: 3rem 0rem;
-    }
+        margin: 0 auto;
+    // }
 }
 
 .calendar-text {
@@ -123,21 +170,21 @@ h1 {
     }
 }
 
-aside {
-    margin: 0 auto;
-    overflow-x: hidden;
-    gap: 1em;
+// aside {
+//     margin: 0 auto;
+//     overflow-x: hidden;
+//     gap: 1em;
 
-    @media screen and (max-width: 1269px) {
-        display: none;
-    }
-}
+//     @media screen and (max-width: 1269px) {
+//         display: none;
+//     }
+// }
 
-.aside-navigation-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+// .aside-navigation-container{
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
 
 .birthday-container {
     margin-top: 2em;
@@ -180,41 +227,41 @@ aside {
     }
 }
 
-.birthday-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 1.5em;
+// .birthday-item {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     margin-bottom: 1.5em;
 
-    .names {
-        h3 {
-            margin: 0 auto;
-            text-align: center;
-        }
-    }
+//     .names {
+//         h3 {
+//             margin: 0 auto;
+//             text-align: center;
+//         }
+//     }
 
-    .texto {
-        font-size: 18px;
-        font-weight: 500;
-        text-align: center;
-        height: 20%;
-        width: 250px;
-        color: #252525;
+//     .texto {
+//         font-size: 18px;
+//         font-weight: 500;
+//         text-align: center;
+//         height: 20%;
+//         width: 250px;
+//         color: #252525;
 
-        @media screen and (min-width: 765px) {
-            font-size: 16px;
-            height: 50px;
-            width: 150px;
-            margin: 0;
-            overflow-wrap: break-word;
-        }
+//         @media screen and (min-width: 765px) {
+//             font-size: 16px;
+//             height: 50px;
+//             width: 150px;
+//             margin: 0;
+//             overflow-wrap: break-word;
+//         }
 
-        @media screen and (min-width: 1022px) {
-            width: 150px;
-            font-size: 16px;
-        }
-    }
-}
+//         @media screen and (min-width: 1022px) {
+//             width: 150px;
+//             font-size: 16px;
+//         }
+//     }
+// }
 
 .imag {
     top: 0;
@@ -227,9 +274,9 @@ aside {
     padding: 2rem;
     margin: 3rem auto;
 
-    @media (min-width: 1023px) {
+    // @media (min-width: 1023px) {
         margin-top: 0;
-    }
+    // }
 
     h2 {
         color: #ffffff;
@@ -250,6 +297,10 @@ aside {
 }
 
 .sisalud {
-    height: 125px;
-    width: 125px;
+    height: 150px;
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
