--- a/src/app/pages/coordinacion-teg/coordinacion-teg.component.html
+++ b/src/app/pages/coordinacion-teg/coordinacion-teg.component.html
@@ -1,4 +1,4 @@
-<app-banner [title]="'Coordinación TEG'"/>
+<app-banner [title]="'Coordinación TEG'" />
 
 <main class="main">
   <h1 class="main-title"> Coordinación de Investigación </h1>
@@ -28,110 +28,75 @@
   </div>
 
   <!-- Acordeón con la información de la sección -->
+  <mat-accordion class="mat-accordion">
+    <mat-expansion-panel *ngFor="let item of infoSeccion; first as isFirst">
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{ item.title }} </mat-panel-title>
 
+      </mat-expansion-panel-header>
 
-        <mat-accordion class="mat-accordion">
-       <mat-expansion-panel> 
-
-        @For("let item of infoSeccion; first as isFirst"){
-          <mat-expansion-panel-header>
-            <mat-panel-tittle>{{item.title}}</mat-panel-tittle>
-        </mat-expansion-panel-header>
-
-        }
-
-
-      
-        @If("item.multiLine"){
-
-        }
-        @For("let line of item.multiLine"){
-          <p>{{line}}</p>
-
-        }
+      <ng-container *ngIf="item.multiLine">
+        <p *ngFor="let line of item.multiLine"> {{ line }} </p>
       </ng-container>
     </mat-expansion-panel>
   </mat-accordion>
 
-
   <h2 class="title-download">Formatos de descarga</h2>
 
   <!-- Archivos descargables de cada facultad -->
-  <ng-container>
-    @For("let career of careers"){
-      <div class="card-container">
-        <div class="card-header">
-          <img [src]="career.backgroundImage" alt="Imagen de fondo">
-          <h2> {{ career.title }} </h2>
-          <h3> Requisitos </h3>
-    }
- 
+  <ng-container *ngFor="let career of careers">
+    <div class="card-container">
+      <div class="card-header">
+        <img [src]="career.backgroundImage" alt="Imagen de fondo">
+        <h2> {{ career.title }} </h2>
+        <h3> Requisitos </h3>
 
-    @For("let line of career.infoMultiLine"){
-      <p>{{line}}</p>
-    }
-      </div>
+        <p *ngFor="let line of career.infoMultiLine"> {{ line }} </p>
       </div>
 
-    </mat-expansion-panel>
-        @For("let fileGroup of career.fileGroups"){
-          <mat-expansion-panel-header>
+      <mat-expansion-panel *ngFor="let fileGroup of career.fileGroups">
+        <mat-expansion-panel-header>
           <mat-panel-title> {{ fileGroup.title }} </mat-panel-title>
-          </mat-expansion-panel-header>
+        </mat-expansion-panel-header>
 
-        }
-
-         <a href="file.link" target="_blank">
-          @For=("let file of fileGroup.files"){
-            <img [src]="file.icoUrl">
-            <p> {{ file.name }} </p>
-          }
-
-         </a>
-   
-
+        <a *ngFor="let file of fileGroup.files" [href]="file.link" target="_blank">
+          <img [src]="file.icoUrl">
+          <p> {{ file.name }} </p>
+        </a>
 
         <!-- Lineas de investigacion -->
         <mat-accordion>
-          <mat-expansion-panel>
-            @For("let value of fileGroup.info"){
-              <mat-expansion-panel-header>
+          <mat-expansion-panel *ngFor=" let value of fileGroup.info">
+            <mat-expansion-panel-header>
               <mat-panel-title> {{ value.Title }} </mat-panel-title>
-              </mat-expansion-panel-header>
-            }
-   
+            </mat-expansion-panel-header>
 
-          <mat-accordion>
-            <ng-container>
-              @For=("let newValue of value.items"){
-                <mat-expansion-panel ></mat-expansion-panel>
+            <mat-accordion>
+              <ng-container *ngFor="let newValue of value.items">
+                <mat-expansion-panel>
 
-              }
-              
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>{{ newValue.newtitle }}</mat-panel-title>
+                  </mat-expansion-panel-header>
 
-                <mat-expansion-panel-header>
-                  <mat-panel-title>{{ newValue.newtitle }}</mat-panel-title>
-                </mat-expansion-panel-header>
-
-                <mat-accordion>
-                  <ng-container> @For=("let informacion of newValue.infovalue"){
-                    }
-                    <ul>
-                      @For("let nuevainformacion of informacion.value"){
+                  <mat-accordion>
+                    <ng-container *ngFor="let informacion of newValue.infovalue">
+                      <ul *ngFor="let nuevainformacion of informacion.value">
                         <li (click)="nuevainformacion.expanded = !nuevainformacion.expanded">
                           {{ nuevainformacion.titleline }}
                         </li>
-                      }
-                      <mat-expansion-panel [expanded]="nuevainformacion.expanded">
-                        <p>{{ nuevainformacion.content }}</p>
-                        <p>{{nuevainformacion.tutores}}</p>
-                      </mat-expansion-panel>
-                    </ul>
-                  </ng-container>
-                </mat-accordion>
+
+                        <mat-expansion-panel [expanded]="nuevainformacion.expanded">
+                          <p>{{ nuevainformacion.content }}</p>
+                          <p>{{nuevainformacion.tutores}}</p>
+                        </mat-expansion-panel>
+                      </ul>
+                    </ng-container>
+                  </mat-accordion>
                 </mat-expansion-panel>
-                </ng-container>
+              </ng-container>
             </mat-accordion>
+
           </mat-expansion-panel>
         </mat-accordion>
       </mat-expansion-panel>
