--- a/src/app/pages/coordinacion-teg/coordinacion-teg.component.html
+++ b/src/app/pages/coordinacion-teg/coordinacion-teg.component.html
@@ -29,77 +29,89 @@
 
   <!-- Acordeón con la información de la sección -->
   <mat-accordion class="mat-accordion">
-    <mat-expansion-panel *ngFor="let item of infoSeccion; first as isFirst">
+    @for (item of infoSeccion; track item; let first = $first) {
+    <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title> {{ item.title }} </mat-panel-title>
 
       </mat-expansion-panel-header>
 
-      <ng-container *ngIf="item.multiLine">
-        <p *ngFor="let line of item.multiLine"> {{ line }} </p>
-      </ng-container>
+      @if (item.multiLine) {
+      @for (line of item.multiLine; track line) {
+      <p> {{ line }} </p>
+      }
+      }
     </mat-expansion-panel>
+    }
   </mat-accordion>
 
   <h2 class="title-download">Formatos de descarga</h2>
 
   <!-- Archivos descargables de cada facultad -->
-  <ng-container *ngFor="let career of careers">
-    <div class="card-container">
-      <div class="card-header">
-        <img [src]="career.backgroundImage" alt="Imagen de fondo">
-        <h2> {{ career.title }} </h2>
-        <h3> Requisitos </h3>
+  @for (career of careers; track career) {
+  <div class="card-container">
+    <div class="card-header">
+      <img [src]="career.backgroundImage" alt="Imagen de fondo">
+      <h2> {{ career.title }} </h2>
+      <h3> Requisitos </h3>
 
-        <p *ngFor="let line of career.infoMultiLine"> {{ line }} </p>
-      </div>
-
-      <mat-expansion-panel *ngFor="let fileGroup of career.fileGroups">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ fileGroup.title }} </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <a *ngFor="let file of fileGroup.files" [href]="file.link" target="_blank">
-          <img [src]="file.icoUrl">
-          <p> {{ file.name }} </p>
-        </a>
-
-        <!-- Lineas de investigacion -->
-        <mat-accordion>
-          <mat-expansion-panel *ngFor=" let value of fileGroup.info">
-            <mat-expansion-panel-header>
-              <mat-panel-title> {{ value.Title }} </mat-panel-title>
-            </mat-expansion-panel-header>
-
-            <mat-accordion>
-              <ng-container *ngFor="let newValue of value.items">
-                <mat-expansion-panel>
-
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>{{ newValue.newtitle }}</mat-panel-title>
-                  </mat-expansion-panel-header>
-
-                  <mat-accordion>
-                    <ng-container *ngFor="let informacion of newValue.infovalue">
-                      <ul *ngFor="let nuevainformacion of informacion.value">
-                        <li (click)="nuevainformacion.expanded = !nuevainformacion.expanded">
-                          {{ nuevainformacion.titleline }}
-                        </li>
-
-                        <mat-expansion-panel [expanded]="nuevainformacion.expanded">
-                          <p>{{ nuevainformacion.content }}</p>
-                          <p>{{nuevainformacion.tutores}}</p>
-                        </mat-expansion-panel>
-                      </ul>
-                    </ng-container>
-                  </mat-accordion>
-                </mat-expansion-panel>
-              </ng-container>
-            </mat-accordion>
-
-          </mat-expansion-panel>
-        </mat-accordion>
-      </mat-expansion-panel>
+      @for (line of career.infoMultiLine; track line) {
+      <p> {{ line }} </p>
+      }
     </div>
-  </ng-container>
+
+    @for (fileGroup of career.fileGroups; track fileGroup) {
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{ fileGroup.title }} </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      @for (file of fileGroup.files; track file) {
+      <a [href]="file.link" target="_blank">
+        <img [src]="file.icoUrl">
+        <p> {{ file.name }} </p>
+      </a>
+      }
+
+      <!-- Lineas de investigacion -->
+      <mat-accordion>
+        @for (value of fileGroup.info; track value) {
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> {{ value.Title }} </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <mat-accordion>
+            @for (newValue of value.items; track newValue) {
+            <mat-expansion-panel>
+
+              <mat-expansion-panel-header>
+                <mat-panel-title>{{ newValue.newtitle }}</mat-panel-title>
+              </mat-expansion-panel-header>
+
+              <mat-accordion>
+                @for (informacion of newValue.infovalue; track informacion) {
+                @for (nuevaInformacion of informacion.value; track nuevaInformacion) {
+                <li (click)="nuevaInformacion.expanded = !nuevaInformacion.expanded">
+                  {{ nuevaInformacion.titleline }}
+                </li>
+
+                <mat-expansion-panel [expanded]="nuevaInformacion.expanded">
+                  <p>{{ nuevaInformacion.content }}</p>
+                  <p>{{nuevaInformacion.tutores}}</p>
+                </mat-expansion-panel>
+                }
+                }
+              </mat-accordion>
+            </mat-expansion-panel>
+            }
+          </mat-accordion>
+
+        </mat-expansion-panel>
+        }
+      </mat-accordion>
+    </mat-expansion-panel>
+    }
+  </div>
+  }
 </main>
