--- a/src/app/pages/comite-salud/comite-salud.component.scss
+++ b/src/app/pages/comite-salud/comite-salud.component.scss
@@ -1,40 +1,115 @@
-@import './../../../capital-humano-global-styles.scss';
+@use "../../../scss/layout/index" as *;
+@import './../capital-humano/capital-humano-global-styles.scss';
+
+.page-wrapper {
+    @include container;
+
+    @media (min-width: 769px) {
+        flex-direction: row;
+    }
+}
 
 main {
-    @include main-container;
-    margin-bottom: 0;
-    margin-bottom: 3em;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+
+    .main-content {
+        margin-bottom: 5rem;
+        width: 100%
+    }
 }
 
-h1{
-    @include titles;
-}
+// main {
+//     @include main-container;
+//     margin-bottom: 0;
+//     margin-bottom: 3em;
+// }
+
+// h1{
+//     @include titles;
+// }
 
 h2{
     @include subtitles;
+    font-size: 3rem;
 } 
 
-table {
-    border-spacing: 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+// table {
+//     border-spacing: 0;
+//     border-bottom-left-radius: 10px;
+//     border-bottom-right-radius: 10px;
+//     box-shadow: var(--box-shadow);
+// }
+
+// .headers{
+//     tr{
+//         background-color: var(--dark-blue);
+//         color: #fafafa;
+//     }
+
+//     th{
+
+//         padding: 0.5em;
+//     }
+// }
+
+// .rows{
+//     padding: 0.5em;
+//     background-color: #fafafa;
+//     border: 2px solid var(--dark-blue);
+// }
+
+section{
+    text-align: center;
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.card-item {
+    border-radius: 12px;
     box-shadow: var(--box-shadow);
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 400px;
+    min-height: 150px;
+    min-width: 288px;
+    padding: 1rem;
+    width: 90%;
+
+    @media (min-width: 769px) {
+        display: flex;
+        width: 60%;
+    }
 }
 
-.headers{
-    tr{
-        background-color: var(--dark-blue);
-        color: #fafafa;
-    }
+.card-item-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
-    th{
+.card-item-title {
+    font-size: 1.5rem;
+    padding: 1rem;
 
-        padding: 0.5em;
+    @media (min-width: 469px) {
+        font-size: 2rem;
     }
 }
 
-.rows{
-    padding: 0.5em;
-    background-color: #fafafa;
-    border: 2px solid var(--dark-blue);
+.card-item-image {
+    height: auto;
+    max-width: 180px;
+    min-height: 120px;
+    min-width: 120px;
+    width: 50%;
 }
