--- a/src/app/pages/integrantes-seguridad-salud/integrantes-seguridad-salud.component.html
+++ b/src/app/pages/integrantes-seguridad-salud/integrantes-seguridad-salud.component.html
@@ -1,18 +1,23 @@
 <app-banner [title]="'Integrantes del SSST'"></app-banner>
 
-<main>
-  <section class="grid-container">
-    <div *ngFor="let integrante of integrantes" class="grid-item">
-      <article>
-        <h3>{{ integrante.nombre }}</h3>
-        <p>{{ integrante.cargo }}</p>
-        <p>{{ integrante.dpto }}</p>
-        <p>
-          Correo:
-          <a href="mailto:{{ integrante.correo }}">{{ integrante.correo }}</a>
-        </p>
-      </article>
-      <img src="{{ integrante.url }}" alt="" class="person-image" />
+<div class="page-wrapper">
+  <main>
+    <div class="main-content">
+      <section class="cards-container">
+        <div *ngFor="let integrante of integrantes" class="card-item">
+          <article>
+            <h3> {{ integrante.nombre }} </h3>
+            <p> {{ integrante.cargo }} </p>
+            <p> {{ integrante.dpto }} </p>
+            <p>
+              Correo:<br/>
+              <a href="mailto:{{ integrante.correo }}"> {{ integrante.correo }} </a>
+            </p>
+          </article>
+
+          <img src="{{ integrante.url }}" alt="" class="person-image" />
+        </div>
+      </section>
     </div>
-  </section>
-</main>
+  </main>
+</div>
