cambios a salud-trabajo y procedimientos

--- a/src/app/pages/centro-idiomas/centro-idiomas.component.scss
+++ b/src/app/pages/centro-idiomas/centro-idiomas.component.scss
@@ -1,5 +1,5 @@
 @use "../../../../../scss/components/navbar" as *;
-@use "../../../../../scss/layout/index" as *;
+@use "../../../scss/layout/index" as *;
 
 .page-wrapper {
   @include container;
