--- a/src/app/pages/procedimientos/procedimientos.component.html
+++ b/src/app/pages/procedimientos/procedimientos.component.html
@@ -17,14 +17,14 @@
     fideicomiso Banesco
   </h2>
 
-  <p>
+  <p class="pasos">
     <strong>Los pasos a seguir para realizar su solicitud son:</strong>
   </p>
 
 
   <p class="text-container">
     1- Verificar monto disponible a retirar, únicamente podrá solicitar como máximo el 75% del monto abonado. Para esta
-    consulta sugerimos consultar la página www.banesco.com. En el menú de Banca por Internet, seleccione la opción
+    consulta sugerimos consultar la página. En el menú de Banca por Internet, seleccione la opción
     BanescOnline. Para poder usar este servicio debe estar afiliado a una tarjeta de debito. Una vez ingresado su
     usuario y contraseña, podrá consultar el saldo de sus cuentas y sus operaciones, así como saldo de fideicomiso.
 
@@ -41,6 +41,7 @@
   </p>
 
   <button class="nav-btn" routerLink="/capital-humano/formatos"> Ir a Formatos </button>
+
 
   <p class="text-container">
     4- El dinero se hará efectivo en la cuenta individual al día siguiente para aquellos trabajadores que poseen cuentas
