--- a/src/app/pages/procedimientos/procedimientos.component.scss
+++ b/src/app/pages/procedimientos/procedimientos.component.scss
@@ -1,19 +1,24 @@
-@import './../../../capital-humano-global-styles.scss';
+@import '../capital-humano-global-styles.scss';
+
+
 
 main {
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-bottom: 3em;
+    margin-top: 1.5em;
     min-height: 100vh;
     width: 100%;
-    margin-top: 1.5em;
-    margin-bottom: 3em;
 
     @media screen and (max-width: 768px) {
-        padding-top: 1.5em;
-        padding-bottom: 3em;
         margin: 0 auto;
+        padding-bottom: 3em;
+        padding-top: 1.5em;
     }
+}
+.pasos{
+    font-size: 19px;
 }
     h1 {
         @include titles;
@@ -24,10 +29,12 @@ main {
     }
 
 h2 {
+    text-align: justify;
     @include subtitles;
+    font-size: 28px;
     width: 55%;
-    @media screen and (max-width: 768px) {
-        width: 80%;
+    @media screen and (max-width: 758px) {
+        width: 90%;
     }
 }
 
@@ -53,19 +60,19 @@ h2 {
 }
 
 .nav-btn {
-    background-image: linear-gradient(to bottom, #fafafa, #e8e8e8);
-    color: var(--dark-blue);
+    background-color: var(--dark-blue);
     border-radius: 25px;
     border: none;
+    color:white;
     cursor: pointer;
-    height: 3em;
-    width: 12em;
     font-size: 1.5rem;
+    height: 3em;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    width: 12em;
 
     @media screen and (max-width: 768px) {
-        width: 50%;
         height: 50%;
+        width: 50%;
     }
 }
 
