taller primeros auxilios

--- a/src/app/pages/cursos-menu/cursos-menu.component.scss
+++ b/src/app/pages/cursos-menu/cursos-menu.component.scss
@@ -1,4 +1,4 @@
-@import './../../../capital-humano-global-styles.scss';
+@import './../capital-humano/capital-humano-global-styles.scss';
 
 main {
   @include main-container;
